Playlist view created
- Playback seeking to timestamp implemented.
- Removed some redundant code (checking whether queue is empty when such action cannot be executed from an empty queue).
- Designed and implemented a basic version of the PlaylistView, containing the most basic functionalities needed.
To Do:
- Assign fx:id to each of the components that need one.
- Add an option to select directories for the library in MainView.
- Implement playlists.