@@ -2,9 +2,11 @@ package com.taskbarplayer.service;
 
 import com.taskbarplayer.model.Song;
 import javafx.application.Platform;
+import javafx.beans.property.*;
 import javafx.scene.media.Media;
 import javafx.scene.media.MediaPlayer;
 
+import java.time.Duration;
 import java.util.concurrent.CountDownLatch;
 
 public class PlaybackService {
@@ -14,9 +16,16 @@ public class PlaybackService {
     private boolean javafxInitialized;
     private double volume = 0.3;
     private boolean muted = false;
+    private ObjectProperty<Song> currentSongProperty = new SimpleObjectProperty<>();
+    private BooleanProperty playingProperty = new SimpleBooleanProperty();
+    private DoubleProperty volumeProperty = new SimpleDoubleProperty(0.3);
 
     public PlaybackService() {
         initializeJavaFX();
+    }
+
+    public ReadOnlyObjectProperty<Song> currentSongProperty() {
+        return currentSongProperty;
     }
 
     private void initializeJavaFX() {
@@ -48,6 +57,7 @@ public class PlaybackService {
         Platform.runLater(() -> {
             disposePlayer();
             currentSong = song;
+            currentSongProperty.set(song);
             Media media = new Media(song.getPath().toUri().toString());
             player = new MediaPlayer(media);
             player.setMute(muted);
@@ -96,6 +106,8 @@ public class PlaybackService {
         player.stop();
         player.dispose();
         player = null;
+        currentSong = null;
+        currentSongProperty.set(null);
     }
 
     public boolean hasSongLoaded() {
@@ -134,7 +146,7 @@ public class PlaybackService {
     }
 
     public void setVolume(double volume) {
-        this.volume = Math.max(0.0, Math.min(1.0, volume));
+        this.volume = Math.clamp(volume, 0.0, 1.0);
         Platform.runLater(() -> {
             if (player != null) {
                 player.setVolume(this.volume);
@@ -148,6 +160,48 @@ public class PlaybackService {
 
     public void decreaseVolume() {
         setVolume(getVolume() - 0.1);
+    }
+
+    public Duration getCurrentTime() {
+        if (player == null) {
+            return Duration.ZERO;
+        }
+        return Duration.ofMillis((long) player.getCurrentTime().toMillis());
+    }
+
+    public double getProgress() {
+        if (player == null) {
+            return 0.0;
+        }
+        Duration duration = currentSong.getDuration();
+        if (duration.isZero()) {
+            return 0.0;
+        }
+        return (double) getCurrentTime().toMillis() / (double) duration.toMillis();
+    }
+
+    public void seek(Duration position) {
+        if (player == null) {
+            return;
+        }
+        if (position.isNegative()) {
+            position = Duration.ZERO;
+        }
+        Duration duration = currentSong.getDuration();
+        if (position.compareTo(duration) > 0) {
+            position = duration;
+        }
+        Duration finalPosition = position;
+        Platform.runLater(() -> player.seek(javafx.util.Duration.millis(finalPosition.toMillis())));
+    }
+
+    public void seekToProgress(double progress) {
+        if (player == null) {
+            return;
+        }
+        progress = Math.clamp(progress, 0.0, 1.0);
+        long timestamp = Math.round(currentSong.getDuration().toMillis() * progress);
+        seek(Duration.ofMillis(timestamp));
     }
 
     public void setPlaybackListener(PlaybackListenerService playbackListener) {
